--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@pcd/passport-interface": "^0.4.2",
+    "@pcd/semaphore-signature-pcd": "^0.4.1",
     "@rainbow-me/rainbowkit": "^0.12.8",
     "ethers": "^5.0.0",
     "next": "^12.1.6",
