--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pcd/ethereum-ownership-pcd": "^0.4.2-next.3",
     "@pcd/passport-interface": "^0.4.2",
+    "@pcd/pcd-types": "^0.4.1",
+    "@pcd/semaphore-identity-pcd": "^0.4.1",
     "@pcd/semaphore-signature-pcd": "^0.4.1",
     "@rainbow-me/rainbowkit": "^0.12.8",
     "ethers": "^5.0.0",
+    "net": "^1.0.2",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "tls": "^0.0.1",
     "wagmi": "^0.12.0"
   },
   "devDependencies": {
